models working, test html

--- a/mysite/movieApp/templates/moviesPage.html
+++ b/mysite/movieApp/templates/moviesPage.html
@@ -1,12 +1,23 @@
 {%extends "base.html" %} {%block content%}
-<h1>texto de moviesPage</h1>
-<ul>
+<h1>Movies:</h1>
+
     {%for movie in movies%}
-    <li>
-        {{movie.title}} 
-    </li>
+    <div>
+        <img src= {{movie.img_path}}  width="300" height="390"> </img>
+        <br> </br>
+        <h2> {{movie.title}} </h2>
+         
+        {{movie.release_date}}
+        <br> </br>
+        {{movie.description}}
+        <br> </br>
+       {% for genre in movie.genresfK.all%}
+            {{genre.name}}
+        {%endfor%}
+
+    </div>
     {%endfor%}
 
-</ul>
+
 {%endblock%}
 ```
