--- a/mysite/movieApp/templates/base.html
+++ b/mysite/movieApp/templates/base.html
@@ -58,7 +58,7 @@
   <div class="main">
     <div class="row justify-content-center">
       <div class="col-8">
-        <h1 class="mt-2">movie app contenido</h1>
+        <h1 class="mt-2">Movify</h1>
         <hr class="mt-0 mb-4">
         {% block content %}
         {% endblock %}
