--- a/mysite/movieApp/templates/base.html
+++ b/mysite/movieApp/templates/base.html
@@ -50,8 +50,7 @@
   <!-- Side navigation -->
   <div class="sidenav">
     <a href="/">Home</a>
-    <a href="/view">View</a>
-    <a href="/create">Create</a>
+    <a href="/recommendedMovies">Recommended</a>
   </div>
 
   <!-- Page content -->
