--- a/mysite/movieApp/templates/recommendedMoviesPage.html
+++ b/mysite/movieApp/templates/recommendedMoviesPage.html
@@ -1,5 +1,5 @@
 {%extends "base.html" %} {%block content%}
-<h1>Movies:</h1>
+<h1>Recommended Movies:</h1>
 
     {%for movie in movies%}
     <div>
