--- a/mysite/movieApp/static/style.css
+++ b/mysite/movieApp/static/style.css
@@ -6,12 +6,17 @@
     top: 0;
     right: 0;
     left: 0;
+    bottom: 0;
     position: absolute;
     
   }
   .main {
     padding-left: 200px;
     color: white;
+  }
+
+  .main h1 {
+    font-size: 20px;
   }
   /* Movie css part*/
   
@@ -23,17 +28,18 @@
     font-family: 'Roboto', sans-serif;
     gap: 10px;
     color: white;
-
   }
 
   .individualMovieItem {
-    overflow-y: scroll;
     width: 370px;
     text-align: center;
     box-sizing: border-box;
-
   }
   
+  .description {
+    overflow-y: scroll;
+
+  }
   .sidenav {
     height: 100%; /* Full-height: remove this if you want "auto" height */
     width: 150px; /* Set the width of the sidebar */
@@ -45,8 +51,7 @@
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 20px;
     padding-right: 20px;
-    border-right: 20px white;
-    border: 2px;
+    border: 20px white;
     
   }
 
@@ -63,6 +68,48 @@
   .sidenav a:hover {
     color: #f1f1f1;
   }
+
+
+  /* Movie Indivudal section */
+  .individualMovie {
+    background-color: white;
+    width: 1300px;
+    height: 600px;
+    display: flex;
+  }
+
+  .informationMovie {
+    background-color: red;
+    width: 300px;
+    height: auto;
+  }
+
+  .movieCR {
+    display: flex;
+    flex-direction: column;
+    width: 1000px;
+  }
+
+  .movieCast {
+    display: flex;
+    padding-left: 10px;
+    background-color: blue;
+    height: 300px;
+    overflow-x: scroll;
+    gap: 10px;
+  }
+  
+  .movieCast img {
+    margin-top: 50px;
+    width: 200px;
+    height: 200px;
+  }
+
+  .movieReview {
+    background-color: green;
+    height: 300px;
+  }
+
   /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
   @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
