--- a/mysite/movieApp/templates/cast.html
+++ b/mysite/movieApp/templates/cast.html
@@ -1,8 +1,8 @@
 {%extends "base.html" %} {%block content%}
 
-<h1>Recent Movies</h1>
+<h1>THE ROCK</h1>
 
-    <div class="allmovie">
+    {% comment %} <div class="allmovie">
         {%for movie in movies%}
         <div class="individualMovieItem">
         <div class="moviebox"> 
@@ -26,7 +26,7 @@
         </div>
    
     {%endfor%}
-    </div>
+    </div> {% endcomment %}
 
 
 {%endblock%}
