--- a/mysite/movieApp/templates/base.html
+++ b/mysite/movieApp/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <title>{% block title %}movieApp{% endblock %}</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
  
 </head>
 
@@ -13,6 +13,7 @@
   <div class="main">
     <!-- Seccion De puro Movify -->
     <h1>Movify</h1> 
+    <p> {{mi_variable}} </p>
      <hr class="mt-0 mb-4"></hr>    <!-- Linea de color negra -->
           {% block content %} {% endblock %}
   </div>
