--- a/mysite/movieApp/templates/movie.html
+++ b/mysite/movieApp/templates/movie.html
@@ -36,9 +36,16 @@
 
         <div class="movieReview">
         <h1> Review </h1>
+
         </div>
+
         </div>
+
+        <button type="button">Add a Review</button>
+
      </div>
+
+     
 
 
 {%endblock%}
