--- a/mysite/movieApp/static/styles.css
+++ b/mysite/movieApp/static/styles.css
@@ -80,6 +80,7 @@
     display: flex;   
     bottom: 0;
     margin: 10px;
+    background-color: red;
   }
 
   /* Pelicula individual */
@@ -134,18 +135,19 @@
     border: 2px solid white;
   }
 
-  .movieReview button {
-    margin-left: 900px;
-    margin-top: 350px;
-    align-items: center;
+  .individualMovie button {
+    /* margin-left: 900px;
+    margin-top: 350px; */
+    width: 150px;
+    height: 150px;
     
   }
 
   .newReview {
     border: 2px solid white;
     width: 150px;
-    height: 150px;
   }
+
 
   /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
   @media screen and (max-height: 450px) {
