Agregado la sección del cast individual

--- a/mysite/movieApp/static/styles.css
+++ b/mysite/movieApp/static/styles.css
@@ -80,7 +80,6 @@
     display: flex;   
     bottom: 0;
     margin: 10px;
-    background-color: red;
   }
 
   /* Pelicula individual */
@@ -148,7 +147,16 @@
     width: 150px;
   }
 
+  .allPageCast {
+    height: 865px;
+    width: 1000px;
+  }
 
+  .individualPerson {
+    border: 2px solid white;
+    display: flex;
+    flex-direction: row;
+  }
   /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
   @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
