--- a/mysite/movieApp/static/styles.css
+++ b/mysite/movieApp/static/styles.css
@@ -2,18 +2,31 @@
   .title-container {
     display: flex;
     flex-direction: row;
-    
+    gap: 10px;
   }
-  .title-text {
-    width: 40px;
+
+  .title-container h1 {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 600;
+    font-size: x-large;
+  }
+
+  .title-container button {
+      background-color: #111;
+      padding: 10px;
+      margin-top: 10px;
+      border: 2px solid white;
+      color: white;
+  }
+  .user {
+    margin-top: 15px;
+    width: 140px;
   }
   .filler {
     width: 16%;
-    background: lightgreen;
   }
   .mini-filler {
     width: 16%;
-    background: lightgreen;
   }
   .rounded-t-5 {
     border-top-left-radius: 0.5rem;
