--- a/mysite/movieApp/static/styles.css
+++ b/mysite/movieApp/static/styles.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: row;
     gap: 10px;
+    /* background-color: green; */
   }
 
   .title-container h1 {
@@ -23,11 +24,9 @@
     width: 140px;
   }
   .filler {
-    width: 16%;
+    width: 1200px;
   }
-  .mini-filler {
-    width: 16%;
-  }
+ 
   .rounded-t-5 {
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
@@ -44,8 +43,7 @@
   }   
   .grandmain {
     display: flex;
-    background-color: #111; /* Black  111*/
-    top: 0;
+    background-color: #1b1b1b;     top: 0;
     right: 0;
     left: 0;
     /* bottom: 0; */
@@ -133,7 +131,7 @@
     bottom: 0;
     overflow-y: visible;
     text-align: center;
-    border: 2px solid white;
+    border: 1px solid white;
   }
   
   /* Imagen dentro de la información de las pelicula */
@@ -158,7 +156,7 @@
     width: 1000px;
     overflow-x: scroll;
     gap: 10px;
-    border: 2px solid white;
+    border: 1px solid white;
     text-align: center;
   }
   /* Imagen que se va repitiendo en la sección de cast */
@@ -173,15 +171,19 @@
     padding: 10px;
     background-color: #111;
     height: 450px;    
-    border: 2px solid white;
+    border: 1px solid white;
   }
 
   .individualMovie button {
     /* margin-left: 900px;
     margin-top: 350px; */
+    margin-top: 346px;
     width: 150px;
-    height: 150px;
-    
+    height: 50px;
+    background-color: #111;
+    border: 2px solid white;
+    color: white;
+  
   }
 
   .newReview {
@@ -199,6 +201,25 @@
     display: flex;
     flex-direction: row;
   }
+
+  /* REVIEW */
+
+  .singleReview{
+    width: 500px;
+    border: 2px solid white;
+    gap: 20px;
+    margin-left: 40px;
+    padding-left: 40px;
+    text-align: center;
+    
+  }
+  
+  .reviewSector {
+    display:flex;
+    flex-direction: column;
+    gap:10px;
+  }
+
   /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
   @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
