--- a/mysite/movieApp/templates/base.html
+++ b/mysite/movieApp/templates/base.html
@@ -18,15 +18,17 @@
     <div class="filler"> </div>
     <h1>{{request.user}}</h1> 
 
-    <a  href="{% url 'login' %}"> 
-
-    <button class="button">Login</button> </a>
+   
 
 
-
+    {% if request.user.is_authenticated %}
     <a  href="{% url 'logout' %}">
     <button class="button">Logout</button> </a>
+    {% else %}
+    <a  href="{% url 'login' %}"> 
 
+      <button class="button">Login</button> </a>
+    {% endif %}
    </div>
 
     <p> {{mi_variable}} </p>
