--- a/mysite/movieApp/templates/review.html
+++ b/mysite/movieApp/templates/review.html
@@ -1,5 +1,5 @@
 {%extends "base.html" %} {%block content%}
-
+  <div class ="all-page-review">
   <div class="allpageformreview"> 
    <div class="review">
     <form method="post">
@@ -8,6 +8,7 @@
             <button type="submit">Enviar reseña</button>
     </form>
     </div>
+  </div>
   </div>
 
 
