--- a/mysite/mysite/movieApp/templates/movie.html
+++ b/mysite/mysite/movieApp/templates/movie.html
@@ -8,8 +8,9 @@
         <h1> MovieInformation </h1>
         <img src= {{movie.img_path}}  width="300" height="390"> </img>
         <br> </br>
-        <h2> {{movie.title}} </h2>
-         
+        <div class="movie-title-detail">
+        <h2 > {{movie.title}} </h2>
+        </div>
         {{movie.release_date}}
         <br> </br>
         {{movie.description}}
