--- a/mysite/movieApp/static/styles.css
+++ b/mysite/movieApp/static/styles.css
@@ -1,17 +1,31 @@
 /* The sidebar menu */
   .title-container {
+    
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    gap: 40px;
+    padding-top: 10px;
     /* background-color: green; */
+    top: 0;
+    
+    
+  }
+  h2 {
+    font-family: 'Roboto', sans-serif;
+   
   }
 
-  .title-container h1 {
-    font-family: 'Courier New', Courier, monospace;
+
+   h3 {
+    font-family: 'Roboto', sans-serif;
     font-weight: 600;
     font-size: x-large;
+    
   }
-
+  
+  .title-container h3 {
+    color:rgb(201, 125, 240);
+  }
   .title-container button {
       background-color: #111;
       padding: 10px;
@@ -21,10 +35,10 @@
   }
   .user {
     margin-top: 15px;
-    width: 140px;
+    /* width: 140px; */
   }
   .filler {
-    width: 1200px;
+    width: 1300px;
   }
  
   .rounded-t-5 {
@@ -60,6 +74,13 @@
     font-size: 20px;
   }
   /* Movie css part*/
+
+  .titlemovie {
+    
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
   
   .allmovie {
     display: flex;
@@ -68,19 +89,20 @@
     height: 810px;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-    gap: 10px;
+    gap: 60px;
     color: white;
   }
 
   .individualMovieItem {
     width: 370px;
-    text-align: center;
+    text-align: justify;
+ ;
     box-sizing: border-box;
-    border: 2px solid white;
+    /* border: 2px solid white; */
   }
  
   .description {
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
 
   }
   .sidenav {
@@ -94,7 +116,7 @@
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 20px;
     padding-right: 20px;
-    border-right: 2px solid white;
+    /* border-right: 2px solid white; */
     
   }
 
@@ -102,7 +124,8 @@
   .sidenav a {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
-    font-size: 25px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
     color: #818181;
     display: block;
   }
@@ -124,6 +147,7 @@
 
   /* Pelicula individual */
   .informationMovie {
+    font-family: 'Roboto', sans-serif;
     background-color: #111;
     margin: 10px;
     width: 500px;
@@ -131,18 +155,30 @@
     bottom: 0;
     overflow-y: visible;
     text-align: center;
-    border: 1px solid white;
+    /* border: 1px solid white; */
+  }
+  .info-movie-text {
+    font-size: 'roboto', sans-serif;
+  }
+
+  .infomoviedescription {
+    padding: 10px;
+    text-align: justify;
   }
   
   /* Imagen dentro de la información de las pelicula */
   .informationMovie img {
     padding: 10px;
   }
+  .movie-title-detail{
+    color:rgb(250, 231, 125);
+  }
 
   /* Sección donde se envuelve la parte de cast y Review */
   .movieCR {
     display: flex;
     flex-direction: column;
+    font-family: 'roboto', sans-serif;
     width: 1500px;
     margin: 10px;
   }
@@ -156,7 +192,7 @@
     width: 1000px;
     overflow-x: scroll;
     gap: 10px;
-    border: 1px solid white;
+    /* border: 1px solid white; */
     text-align: center;
   }
   /* Imagen que se va repitiendo en la sección de cast */
@@ -171,7 +207,7 @@
     padding: 10px;
     background-color: #111;
     height: 450px;    
-    border: 1px solid white;
+    /* border: 1px solid white; */
   }
 
   .individualMovie button {
@@ -197,20 +233,38 @@
   }
 
   .individualPerson {
-    border: 2px solid white;
+    margin: 60px;
+    /* border: 2px solid white; */
     display: flex;
     flex-direction: row;
+    font-family: 'roboto', sans-serif;
+    text-align: center;
+  }
+  .person-info{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-left: 10px;
+    margin-top: 10px;
+    text-align: justify;
   }
 
   /* REVIEW */
+
+  .all-page-review {
+    font-family: 'roboto', sans-serif;
+  }
 
   .singleReview{
     width: 500px;
     border: 2px solid white;
     gap: 20px;
     margin-left: 40px;
-    padding-left: 40px;
+    margin-top: 10px;
+    padding-top: 10px;
     text-align: center;
+    font-size: large;
+    height: 100px;
     
   }
   
@@ -219,6 +273,8 @@
     flex-direction: column;
     gap:10px;
   }
+
+  
 
   /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
   @media screen and (max-height: 450px) {
