--- a/mysite/movieApp/templates/movie.html
+++ b/mysite/movieApp/templates/movie.html
@@ -1,17 +1,19 @@
 {%extends "base.html" %} {%block content%}
 
-    <h1>{{movie.title}}</h1>
     <div class="individualMovie">
     {% comment %} Movie information {% endcomment %}
     <div class= "informationMovie">
-        <h1> MovieInformation </h1>
+        <h1> Movie details </h1>
         <img src="https://image.tmdb.org/t/p/original{{ movie.img_path }}" width="300" height="250"> </img>
         <br> </br>
+        <div class="movie-title-detail">
         <h2> {{movie.title}} </h2>
-         
+         </div>
         {{movie.release_date}}
         <br> </br>
+        <div class="infomoviedescription">
         {{movie.description}} 
+        </div>
                 <br> </br>
        {% for studio in studio%}
             Studio: {{studio.name}} <br>
@@ -29,10 +31,11 @@
         {%endfor%}
     </div>
     {% comment %} Cast {% endcomment %}
-    
     <div class="movieCR">
      <div class="movieCast">
+        <div class="info-movie-text">
         <h1> Cast </h1>
+        </div>
             {% for person in movie.credits.all %}
         <div class="fotoName"> 
         <a  href="{% url 'cast' person.id %}"> 
@@ -42,7 +45,6 @@
         </div>
             {%endfor%}
         </div>
-
         <div class="movieReview">
         <h1> Review </h1>
         <div class="reviewSector"> 
